--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,9 @@
 
 <h1><%= t('view.common.page_title.books') %></h1>
 
+<p>ページ：<%= @books.current_page %> / <%= @books.total_pages %></p>
+<p><%= @books.total_count %>件中<%= @books.offset_value + 1 %>~<%= @books.offset_value + @books.length %>件を表示しています</p>
+
 <table>
   <thead>
     <tr>
@@ -28,6 +31,8 @@
   </tbody>
 </table>
 
+<br>
+<%= paginate @books %>
 <br>
 
 <%= link_to t('view.common.link.new'), new_book_path %>
