--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,8 +2,7 @@
 
 <h1><%= t('view.common.page_title.books') %></h1>
 
-<p>ページ：<%= @books.current_page %> / <%= @books.total_pages %></p>
-<p><%= @books.total_count %>件中<%= @books.offset_value + 1 %>~<%= @books.offset_value + @books.length %>件を表示しています</p>
+<%= page_entries_info @books %>
 
 <table>
   <thead>
