アカウントに関するリンクの追加とi18nの導入

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,21 @@
   </head>
 
   <body>
+    <p>
+      <% if user_signed_in? %>
+        現在<strong><%= current_user.email %></strong>のアカウントでログインしています
+        <%= link_to t('devise.shared.links.edit_profile'), edit_user_registration_path %> |
+        <%= link_to t('devise.shared.links.sign_out'), destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to t('devise.shared.links.sign_up'), new_user_registration_path %> |
+        <%= link_to t('devise.shared.links.sign_in'), new_user_session_path %>
+      <% end %>
+    </p>
     <% if notice %>
-      <p><%= notice %></p>
+      <p id="notice"><%= notice %></p>
     <% end %>
     <% if alert %>
-      <p><%= alert %></p>
+      <p id="alert"><%= alert %></p>
     <% end %>
     <%= yield %>
   </body>
