--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,7 +15,7 @@
 
 <p>
   <strong><%= Book.human_attribute_name(:picture) %>:</strong>
-  <%= image_tag(@book.picture_url) if @book.picture.present? %>
+  <%= image_tag(@book.picture) if @book.picture.present? %>
 </p>
 
 <%= link_to t('view.common.link.edit'), edit_book_path(@book) %> |
