--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -52,6 +52,11 @@
     <%= f.text_area :introduction, autofocus: true, autocomplete: "introduction" %>
   </div>
 
+  <div class="field">
+    <%= f.label :avatar %>
+    <%= f.file_field :avatar, autocomplete: "avatar" %>
+  </div>
+
   <div class="actions">
     <%= f.submit t('devise.registrations.edit.update') %>
   </div>
