ユーザーフォロー機能を実装、I18nの調整

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t('view.common.page_title.books') %></h1>
+<h1><%= t('view.book.page_title.index') %></h1>
 
 <%= page_entries_info @books %>
 
