--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,4 @@
-<h1><%= t('view.common.page_title.new') %></h1>
+<h1><%= t('view.book.page_title.new') %></h1>
 
 <%= render 'form', book: @book %>
 
