--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,5 +14,17 @@
 <%= @user.introduction %>
 <br />
 
+<p><%= link_to t('view.relationship.link.follows'), follows_user_path(@user.id) %></p>
+<p><%= link_to t('view.relationship.link.followers'), followers_user_path(@user.id) %></p>
+
+<br />
+<% if @user != current_user %>
+    <% if @user.followed_by?(current_user) %>
+      <%= link_to t('view.relationship.link.followed'), user_relationships_path(@user.id), method: :delete %>
+    <% else %>
+      <%= link_to t('view.relationship.link.follow'), user_relationships_path(@user.id), method: :post  %>
+    <% end %>
+<% end %>
+
 <br />
 <%= link_to t('view.common.link.back'), books_path %>
