--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,14 +17,15 @@
 <p><%= link_to t('view.relationship.link.follows'), follows_user_path(@user.id) %></p>
 <p><%= link_to t('view.relationship.link.followers'), followers_user_path(@user.id) %></p>
 
-<br />
 <% if @user != current_user %>
-    <% if @user.followed_by?(current_user) %>
-      <%= link_to t('view.relationship.link.followed'), user_relationships_path(@user.id), method: :delete %>
-    <% else %>
-      <%= link_to t('view.relationship.link.follow'), user_relationships_path(@user.id), method: :post  %>
-    <% end %>
+  <p><%= link_to t('view.book.link.index'), user_books_path(@user.id) %></p>
+  <p><% if @user.followed_by?(current_user) %>
+    <%= link_to t('view.relationship.link.followed'), user_relationships_path(@user.id), method: :delete %>
+  <% else %>
+    <%= link_to t('view.relationship.link.follow'), user_relationships_path(@user.id), method: :post  %></p>
+  <% end %>
+  <% else %>
+    <p><%= link_to t('view.book.link.index'), root_path %></p>
 <% end %>
 
-<br />
-<%= link_to t('view.common.link.back'), books_path %>
+<p><%= link_to t('view.common.link.back'), books_path %></p>
