--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,8 +22,8 @@
   <p><% if @user.followed_by?(current_user) %>
     <%= link_to t('view.relationship.link.followed'), user_relationships_path(@user.id), method: :delete %>
   <% else %>
-    <%= link_to t('view.relationship.link.follow'), user_relationships_path(@user.id), method: :post  %></p>
-  <% end %>
+    <%= link_to t('view.relationship.link.follow'), user_relationships_path(@user.id), method: :post  %>
+  <% end %></p>
   <% else %>
     <p><%= link_to t('view.book.link.index'), root_path %></p>
 <% end %>
