--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -20,6 +20,10 @@ p
     = Book.human_attribute_name(:picture)
     | :
   = image_tag(@book.picture_url) if @book.picture.present?
-= link_to t('view.common.link.edit'), edit_book_path(@book)
-|  | 
-= link_to t('view.common.link.back'), books_path
+
+- if current_user.id == @book.user_id
+  = link_to t('view.common.link.edit'), edit_book_path(@book)
+  |  |
+  = link_to t('view.common.link.back'), books_path
+- else
+  = link_to t('view.common.link.back'), user_books_path(@book.user_id)
