--- a/app/views/users/books/index.html.slim
+++ b/app/views/users/books/index.html.slim
@@ -25,7 +25,7 @@ table
         td
           = book.picture
         td
-          = link_to t('view.common.link.show'), user_book_url(params[:user_id],book.id)
+          = link_to t('view.common.link.show'), book_path(book.id)
 br
 = paginate @books
 br
