--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -21,9 +21,12 @@ p
   = link_to t('view.relationship.link.follows'), follows_user_path(@user.id)
 p
   = link_to t('view.relationship.link.followers'), followers_user_path(@user.id)
+p
+  = link_to t('view.report.link.other_index', {name: @user.name}), user_reports_path(@user.id)
+
 - if @user != current_user
   p
-    = link_to t('view.book.link.index'), user_books_path(@user.id)
+    = link_to t('view.book.link.other_index', {name: @user.name}), user_books_path(@user.id)
   p
     - if @user.followed_by?(current_user)
       = link_to t('view.relationship.link.followed'), user_relationships_path(@user.id), method: :delete
@@ -32,5 +35,6 @@ p
 - else
   p
     = link_to t('view.book.link.index'), root_path
+
 p
   = link_to t('view.common.link.back'), books_path
