Commentモデルにauthorを追加し、本・日報の詳細画面でコメントしたユーザーの名前確認及び、コメントの編集・削除ができるように変更

--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -21,10 +21,15 @@ p
 - if @comments.present?
   - @comments.each do |comment|
     hr
+    strong
+      = link_to comment.author, user_path(comment.user_id)
     p
       = comment.body
-      br
-      = link_to t('view.common.link.show'), [@report,comment]
+    p
+    - if current_user.id == comment.user_id
+      = link_to t('view.common.link.edit'), [:edit, @report, comment]
+      |  |
+      = link_to t('view.common.link.destroy'), [@report, comment], method: :delete
 
 p
   = link_to t('view.comment.link.new'), new_report_comment_path(@report.id)
