--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -24,10 +24,15 @@ p
 - if @comments.present?
   - @comments.each do |comment|
     hr
+    strong
+      = link_to comment.author, user_path(comment.user_id)
     p
       = comment.body
-      br
-      = link_to t('view.common.link.show'), [@book,comment]
+    p
+    - if current_user.id == comment.user_id
+      = link_to t('view.common.link.edit'), [:edit, @book, comment]
+      |  |
+      = link_to t('view.common.link.destroy'), [@book, comment], method: :delete
 
 p
   = link_to t('view.comment.link.new'), new_book_comment_path(@book.id)
