--- a/app/views/books/new.html.slim
+++ b/app/views/books/new.html.slim
@@ -1,4 +1,4 @@
 h1
-  = t('view.book.page_title.new')
+  = t('.title')
 = render 'form', book: @book
-= link_to t('view.common.link.back'), books_path
+= link_to t('common.link.back'), books_path
