--- a/app/views/comments/new.html.slim
+++ b/app/views/comments/new.html.slim
@@ -1,5 +1,5 @@
-h1 = t('view.comment.page_title.new')
+h1 = t('.title')
 
 = render 'form', comment: @comment
 
-= link_to t('view.common.link.back'), @commentable
+= link_to t('common.link.back'), @commentable
