--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -1,3 +1,5 @@
+h1 = t('.title')
+
 p
   strong = Report.human_attribute_name(:title)
   | ：
@@ -18,6 +20,8 @@ p
   strong ユーザー名：
   = @user.name
 
+br
+
 - if @comments.present?
   - @comments.each do |comment|
     hr
@@ -27,18 +31,18 @@ p
       = comment.body
     p
     - if current_user.id == comment.user_id
-      = link_to t('view.common.link.edit'), [:edit, @report, comment]
+      = link_to t('common.link.edit'), [:edit, @report, comment]
       |  |
-      = link_to t('view.common.link.destroy'), [@report, comment], method: :delete
+      = link_to t('common.link.destroy'), [@report, comment], method: :delete
 
 p
-  = link_to t('view.comment.link.new'), new_report_comment_path(@report.id)
+  = link_to t('comments.new.link'), new_report_comment_path(@report.id)
 
 - if current_user.id == @report.user_id
-  = link_to t('view.common.link.edit'), edit_report_path(@report)
+  = link_to t('common.link.edit'), edit_report_path(@report)
   | |
-  = link_to t('view.common.link.destroy'), @report, data: { confirm: t('view.common.confirm.destroy') }, method: :delete
+  = link_to t('common.link.destroy'), @report, data: { confirm: t('common.confirm.destroy') }, method: :delete
   | |
-  = link_to t('view.common.link.back'), user_reports_path(@report.user_id)
+  = link_to t('common.link.back'), user_reports_path(@report.user_id)
 - else
-  = link_to t('view.common.link.back'), reports_path
+  = link_to t('common.link.back'), reports_path
