--- a/app/views/users/books/index.html.slim
+++ b/app/views/users/books/index.html.slim
@@ -1,5 +1,5 @@
 h1
-  = t('view.book.page_title.other_index', {name: @user.name})
+  = t('books.other_index.title', {name: @user.name})
 = page_entries_info @books
 table
   thead
@@ -25,7 +25,7 @@ table
         td
           = book.picture
         td
-          = link_to t('view.common.link.show'), book_path(book.id)
+          = link_to t('common.link.show'), book_path(book.id)
 br
 = paginate @books
 br
