--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -6,9 +6,9 @@ h1
       = link_to user.name, user_path(user.id)
     - if user != current_user
       - if user.followed_by?(current_user)
-        = link_to t('view.relationship.link.followed'), user_relationships_path(user.id), method: :delete
+        = link_to t('relationships.followed.link'), user_relationships_path(user.id), method: :delete
       - else
-        = link_to t('view.relationship.link.follow'), user_relationships_path(user.id), method: :post
+        = link_to t('relationships.follow.link'), user_relationships_path(user.id), method: :post
 br
 br
-= link_to t('view.common.link.back'), books_path
+= link_to t('common.link.back'), books_path
