--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -18,23 +18,23 @@ h3
 = @user.introduction
 br
 p
-  = link_to t('view.relationship.link.follows'), follows_user_path(@user.id)
+  = link_to t('relationships.follows.link'), follows_user_path(@user.id)
 p
-  = link_to t('view.relationship.link.followers'), followers_user_path(@user.id)
+  = link_to t('relationships.followers.link'), followers_user_path(@user.id)
 p
-  = link_to t('view.report.link.other_index', {name: @user.name}), user_reports_path(@user.id)
+  = link_to t('reports.other_index.title', {name: @user.name}), user_reports_path(@user.id)
 
 - if @user != current_user
   p
-    = link_to t('view.book.link.other_index', {name: @user.name}), user_books_path(@user.id)
+    = link_to t('books.other_index.title', {name: @user.name}), user_books_path(@user.id)
   p
     - if @user.followed_by?(current_user)
-      = link_to t('view.relationship.link.followed'), user_relationships_path(@user.id), method: :delete
+      = link_to t('relationships.followed.link'), user_relationships_path(@user.id), method: :delete
     - else
-      = link_to t('view.relationship.link.follow'), user_relationships_path(@user.id), method: :post
+      = link_to t('relationships.follow.link'), user_relationships_path(@user.id), method: :post
 - else
   p
-    = link_to t('view.book.link.index'), root_path
+    = link_to t('books.index.title'), root_path
 
 p
-  = link_to t('view.common.link.back'), books_path
+  = link_to t('common.link.back'), books_path
