--- a/app/views/reports/edit.html.slim
+++ b/app/views/reports/edit.html.slim
@@ -1,6 +1,6 @@
-h1 = t('view.report.page_title.edit')
+h1 = t('reports.edit.title')
 
 == render 'form'
 
-= link_to t('view.common.link.back'), @report
+= link_to t('common.link.back'), @report
 
