--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -30,11 +30,7 @@ h2
   .field
     = f.label :password_confirmation
     br
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
-    = f.label :current_password
-    i
-      = t('devise.registrations.edit.we_need_your_current_password_to_confirm_your_changes')
+    = f.password_field :password_confirmation, autocomplete: "password-confirmation"
     br
   .field
     = f.label :postal_code
