--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -32,7 +32,7 @@ p
     - if current_user.id == comment.user_id
       = link_to t('common.link.edit'), [:edit, @book, comment]
       |  |
-      = link_to t('common.link.destroy'), [@book, comment], method: :delete
+      = link_to t('common.link.destroy'), [@book, comment], method: :delete,  data: { confirm: t('common.confirm.destroy') }
 
 p
   = link_to t('comments.new.link'), new_book_comment_path(@book.id)
